# museum-pipeline

./: .gitignore  README.md
.github/workflows/: test_and_deploy.yml
init-cloud-resources/: main.tf  output.tf  variables.tf
pipeline/: conf_logging.json  pyproject.toml
pipeline/scripts/: connect-db.sh  connect-ec2.sh  init-db.sh  init-ec2.sh  schema.sql  send-env.sh
pipeline/src/museum_pipeline/: conf_logging.json  extract.py  kafka_pipeline.py  lmnh_kafka_pipeline.py  lms_kafka_pipeline.py  load.py  pipeline.py  pipeline_logger.py  transform.py
pipeline/tests/: test_extract.py  test_kafka_pipeline.py  test_transform.py
