
[build-system]
requires = ["setuptools>=42", "wheel"]  # Build-time dependencies
build-backend = "setuptools.build_meta"

[project]
name = "museum_pipeline"
version = "1.0"
authors = [
{name = "Samuel Stern"}
]
dependencies = [
"boto3",
"psycopg2-binary",
"python-dotenv",
"confluent-kafka",
"datetime",
"argparse"
]

[project.urls]
Homepage = "https://github.com/stern-sigma/museum-pipeline"
